# scout-mdsbom

./: README.md  pyproject.toml
.github/workflows/: dynamic_sbom_sca_scout.yml
scout_mdsbom/: __init__.py
