[tool.poetry]
name = "scout-mdsbom"
version = "0.1.0"
description = ""
authors = ["Thanassis Avgerinos <thanassis.avgerinos@gmail.com>"]
readme = "README.md"
packages = [{include = "scout_mdsbom"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib-venn = "^1.1.1"

[tool.poetry.scripts]
main = "scout_mdsbom:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

